# scorep_plugin_craypm

./: CMakeLists.txt  README.md  pm_lib.c  pm_lib.h  pm_plugin.cpp
